--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 				<!-- Display generated text -->
 				<div class="generatedTextDisplay">
-					<button>Use text</button>
+					<input type="submit" value="Determine sentiment of this text" class="useTextRunAPI"/>
 					<p class="generatedText"></p>
 					<span class="moreInfoOne"></span>
 					<span class="moreInfoTwo"></span>
