--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 					<textarea id="text" name="" rows="5" cols="33">Input text for analysis here</textarea>
 					<div class="displayMoreInfo">
-						<span class="moreInfoOne"></span>
-						<span class="moreInfoTwo"></span>
+						<i><span class="moreInfoOne"></span></i>
+						<i><span class="moreInfoTwo"></span></i>
 					</div>
 					<input type="submit" value="Determine sentiment" class="runAPI"/>
 		</div>
