--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		</div>
 
 		<!-- Footer -->
-			<footer id="footer">
+			<footer>
 				<ul class="icons">
 					<li><a href="https://twitter.com/bytesbybianca" class="icon brands fa-twitter" target="_blank" rel="noopener noreferrer"><span class="label">Twitter</span></a></li>
 					<li><a href="https://github.com/bytesbybianca/" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
