--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<!-- Header -->
 		<header id="header">
 			<h1>Sentiment API</h1>
-			<p>Input text to determine sentiment<br />
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, magni?.</p>
+			<p>Use the text generator or input your own text.<br />
+			Through sentiment analysis, your text will be identified as positive, negative, or neutral.</p>
 		</header>
 
 		<div class="wrapper">
