--- a/index.html
+++ b/index.html
@@ -24,20 +24,23 @@
 				<!-- Dropdown Menu -->
 				<select class="selectText" id="textSelector">
 					<option value="" selected disabled>-Choose text to generate-</option>
-					<option value="uselessFact">Useless Fact</option>
-					<option value="rickAndMorty">Rick and Morty</option>
-					<option value="gameOfThrones">Game of Thrones (API not working rn??)</option>
-					<option value="ronSwanson">Ron Swanson</option>
+					<option value="anime">Anime</option>
+					<option value="kanye">Kanye West</option>
+					<option value="lotr">Lord of the Rings</option>
+					<option value="mcu">Marvel Cinematic Universe</option>
 					<option value="movieAndSeries">Movie and Series</option>
-					<option value="strangerThings">Stranger Things</option>
 					<option value="owenWilsonWow">Owen Wilson's "Wow"</option>
-					<option value="breakingBad">Breaking Bad (API not working rn??)</option>
+					<option value="rickAndMorty">Rick and Morty</option>
+					<option value="ronSwanson">Ron Swanson</option>
+					<option value="strangerThings">Stranger Things</option>
+					<option value="taylor">Taylor Swift lyrics</option>
+					<option value="uselessFact">Useless Fact</option>
 				</select>
 
 					<textarea id="text" name="" rows="5" cols="33">Input text for analysis here</textarea>
 					<div class="displayMoreInfo">
 						<i><span class="moreInfoOne"></span></i>
-						<i><span class="moreInfoTwo"></span></i>
+						<!-- <i><span class="moreInfoTwo"></span></i> -->
 					</div>
 					<input type="submit" value="Determine sentiment" class="runAPI"/>
 		</div>
