separate js files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="wrapper">
 				<!-- Dropdown Menu -->
 				<select class="selectText" id="textSelector">
-					<option value="" selected disabled>-Choose text to generate-</option>
+					<option value="" selected disabled>-- Choose text to generate --</option>
 					<option value="anime">Anime</option>
 					<option value="kanye">Kanye West</option>
 					<option value="lotr">Lord of the Rings</option>
@@ -34,7 +34,7 @@
 					<option value="ronSwanson">Ron Swanson</option>
 					<option value="strangerThings">Stranger Things</option>
 					<option value="taylor">Taylor Swift lyrics</option>
-					<option value="uselessFact">Useless Fact</option>
+					<option value="uselessFact">Useless Facts</option>
 				</select>
 
 					<textarea id="text" name="" rows="5" cols="33">Input text for analysis here</textarea>
@@ -68,6 +68,7 @@
 		<!-- Scripts -->
 			<script src="assets/js/app.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/gentext.js"></script>
 
 	</body>
 </html>
