--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1>Sentiment API</h1>
+			<h1>Sentiment Analysis</h1>
 			<p>Use the text generator or input your own text.<br />
 			Through sentiment analysis, your text will be identified as positive, negative, or neutral.</p>
 		</header>
@@ -55,7 +55,7 @@
 
 
 		<!-- Footer -->
-			<!-- <footer>
+			<footer>
 				<ul class="icons">
 					<li><a href="https://twitter.com/bytesbybianca" class="icon brands fa-twitter" target="_blank" rel="noopener noreferrer"><span class="label">Twitter</span></a></li>
 					<li><a href="https://github.com/bytesbybianca/" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
@@ -63,7 +63,7 @@
 				<ul class="copyright">
 					<li>&copy; Bianca Togonon</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
-			</footer> -->
+			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/app.js"></script>
