--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 			<script src="assets/js/app.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/gentext.js"></script>
+			<script src="assets/js/config.js"></script>
 
 	</body>
 </html>
