refine instructions styles

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		<!-- Header -->
 		<header id="header">
 			<h1>Sentiment Analysis</h1>
-			<p>Use the text generator or input your own text.<br />
-			Through sentiment analysis, your text will be identified as positive, negative, or neutral.</p>
 		</header>
 
 		<div class="wrapper">
+				<p class="instructions">Use the text generator or input your own text.<br />
+				Through sentiment analysis, your text will be identified as positive, negative, or neutral.</p>
 				<!-- Dropdown Menu -->
 				<select class="selectText" id="textSelector">
 					<option value="" selected disabled>-- Choose text to generate --</option>
